# arkworks-extensions

./: .gitignore  Cargo.toml  README.md
.github/: CODEOWNERS
.github/workflows/: benchmark.yml  check.yml
ark-scale/: Cargo.toml  README.md
ark-scale/src/: lib.rs  tests.rs
benchmarking/: Cargo.toml
curves/: .gitignore  Cargo.toml
curves/ark_sub_bls12_381/: Cargo.toml
curves/ark_sub_bls12_381/src/: lib.rs
curves/ark_sub_bls12_381/src/curves/: g1.rs  g2.rs  mod.rs  util.rs
curves/bls12_377/: Cargo.toml
curves/bls12_377/src/: lib.rs
curves/bls12_377/src/constraints/: curves.rs
curves/bls12_377/src/curves/: g1.rs  g2.rs  mod.rs  tests.rs
curves/bls12_381/: Cargo.toml
curves/bls12_381/src/: lib.rs
curves/bls12_381/src/curves/: g1.rs  g2.rs  mod.rs  util.rs
curves/bls12_381/src/curves/tests/: mod.rs
curves/bw6_761/: Cargo.toml
curves/bw6_761/src/: lib.rs
curves/bw6_761/src/curves/: g1.rs  g2.rs  mod.rs  tests.rs
curves/curve-constraint-tests/: Cargo.toml
curves/curve-constraint-tests/src/: lib.rs
curves/ed_on_bls12_377/: Cargo.toml
curves/ed_on_bls12_377/src/: lib.rs
curves/ed_on_bls12_377/src/curves/: mod.rs  tests.rs
curves/ed_on_bls12_381/: Cargo.toml
curves/ed_on_bls12_381/src/: lib.rs
curves/ed_on_bls12_381/src/curves/: mod.rs  tests.rs
curves/ed_on_bls12_381_bandersnatch/: Cargo.toml
curves/ed_on_bls12_381_bandersnatch/src/: lib.rs
curves/ed_on_bls12_381_bandersnatch/src/curves/: mod.rs  tests.rs
curves/ed_on_bls12_381_bandersnatch/src/fields/: fq.rs
curves/pallas/: Cargo.toml
curves/pallas/src/: lib.rs
curves/pallas/src/curves/: mod.rs  tests.rs
curves/secp256k1/: Cargo.toml
curves/secp256k1/src/: lib.rs
curves/secp256k1/src/curves/: mod.rs  tests.rs
curves/utils/: Cargo.toml
curves/utils/src/: lib.rs
curves/vesta/: Cargo.toml
curves/vesta/src/: lib.rs
curves/vesta/src/curves/: mod.rs  tests.rs
models/: Cargo.toml
models/src/: lib.rs
models/src/bls12/: g1.rs  g2.rs  mod.rs
models/src/models/: mod.rs
models/src/models/bls12/: g1.rs  g2.rs  mod.rs
models/src/models/bw6/: g1.rs  g2.rs  mod.rs
models/src/short_weierstrass/: affine.rs  group.rs  mod.rs  serialization_flags.rs
scripts/: crates_publish_dry_run.sh  crates_publish_manual.sh  publish.sh
test-utils/: Cargo.toml
test-utils/curve-constraint-tests/: Cargo.toml
test-utils/curve-constraint-tests/src/: lib.rs
test-utils/src/: lib.rs
