[profile.bench]
lto = true

[workspace]

members = ["curves/bls12_381", "curves/bls12_377", "curves/bw6_761", "curves/ed_on_bls12_377", "curves/ed_on_bls12_381", "curves/utils", "models" ]

[patch.crates-io]
sp-io =  { git = "https://github.com/paritytech/substrate.git", branch = "achimcc/arkworks-integration" }
sp-arkworks =  { git = "https://github.com/paritytech/substrate.git", branch = "achimcc/arkworks-integration" }

