[workspace]
members = [
  "curves/bls12_381",
  "curves/bls12_377",
  "curves/bw6_761",
  "curves/ed_on_bls12_377",
  "curves/ed_on_bls12_381_bandersnatch",
  "models",
  "test-utils",
]
resolver = "2"

[workspace.package]
version = "0.4.1-beta"
authors = [
  "Parity Technologies <admin@parity.io>",
  "Achim Schneider <achim@parity.io>",
  "Davide Galassi <davxy@datawok.net>"
]
repository = "https://github.com/paritytech/arkworks-ext"
keywords = ["cryptography", "elliptic-curves", "pairing"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"

[workspace.dependencies]
ark-ec = { version = "0.4.2", default-features = false }
ark-ff = { version = "0.4.2", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.2", default-features = false }
ark-bls12-377 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-bls12-381 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-bw6-761 = { version = "0.4.0", default-features = false }
ark-ed-on-bls12-377 = { version = "0.4.0", default-features = false }
ark-ed-on-bls12-381-bandersnatch = { version = "0.4.0", default-features = false }
ark-scale = { version = "0.0.11", default-features = false, features = ["hazmat"] }
ark-algebra-test-templates = { version = "0.4.2", default-features = false }

sp-ark-models = { path = "./models", default-features = false }
test-utils = { path = "./test-utils", default-features = false }

derivative = { version = "2.2", default-features = false, features = ["use_core"] }
num-traits = { version = "0.2", default-features = false }
