[workspace]
members = [
  "curves/bls12_381",
  "curves/bls12_377",
  "curves/bw6_761",
  "curves/ed_on_bls12_377",
  "curves/ed_on_bls12_381_bandersnatch",
  "models",
  "test-utils", "curves/pallas", "curves/vesta", "curves/secp256k1",
]
resolver = "2"

[workspace.package]
version = "0.5.0"
authors = [
  "Davide Galassi <davxy@datawok.net>",
  "Achim Schneider <achim@parity.io>",
  "Parity Technologies <admin@parity.io>",
]
repository = "https://github.com/paritytech/arkworks-extensions"
keywords = ["cryptography", "elliptic-curves", "pairing"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"

[workspace.dependencies]
ark-ec = { version = "0.5", default-features = false }
ark-ff = { version = "0.5", default-features = false }
ark-std = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5", default-features = false }
ark-pallas = { version = "0.5.0", default-features = false , features = ["curve"]}
ark-vesta = { version = "0.5.0", default-features = false }
ark-secp256k1 = { version = "0.5.0", default-features = false }
ark-bls12-377 = { version = "0.5", default-features = false, features = ["curve"] }
ark-bls12-381 = { version = "0.5", default-features = false, features = ["curve"] }
ark-bw6-761 = { version = "0.5", default-features = false }
ark-ed-on-bls12-377 = { version = "0.5", default-features = false }
ark-ed-on-bls12-381-bandersnatch = { version = "0.5", default-features = false }
ark-algebra-test-templates = { version = "0.5", default-features = false }

ark-models-ext = { path = "./models", default-features = false }
test-utils = { path = "./test-utils", default-features = false }

derivative = { version = "2.2", default-features = false, features = ["use_core"] }
num-traits = { version = "0.2", default-features = false }
