[package]
name = "ark-scale"
description = "Arkworks serialization wrapped in Parity SCALE codec"
authors = ["Jeff Burdges <jeff@web3.foundation>"]
version = "0.0.1"
repository = ""
edition = "2021"
license = "MIT/Apache-2.0"


[dependencies]
parity-scale-codec = { version = "3.4", default-features = false }
ark-std = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4", default-features = false, features = [ "derive" ] }

# ark-serialize-derive = { version = "0.4", default-features = false }
# arrayvec = { version = "0.7.2", default-features = false }
# arrayref = { version = "0.3", default-features = false }


[dev-dependencies]
ark-bls12-381 = { version = "0.4" }
ark-ed25519 = { version = "0.4" }
rand_core = { version = "0.6", features = [ "getrandom" ] }


[features]
default = ["std"]
std = ["ark-std/std"]

