[workspace]
members = [
    "node",
    "pallets/template",
    "runtime",
]

[profile.release]
panic = 'unwind'
lto = true

[patch.crates-io]
pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", "branch" = "achimcc/arkworks-integration-remove-affine-hostcalls" }
sp-core = { git = "https://github.com/paritytech/substrate.git", "branch" = "achimcc/arkworks-integration-remove-affine-hostcalls" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", "branch" = "achimcc/arkworks-integration-remove-affine-hostcalls" }
sp-std = { git = "https://github.com/paritytech/substrate.git", "branch" = "achimcc/arkworks-integration-remove-affine-hostcalls" }
sp-io = { git = "https://github.com/paritytech/substrate.git", "branch" = "achimcc/arkworks-integration-remove-affine-hostcalls" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", "branch" = "achimcc/arkworks-integration-remove-affine-hostcalls" }
frame-support = { git = "https://github.com/paritytech/substrate.git", "branch" = "achimcc/arkworks-integration-remove-affine-hostcalls" }
frame-system = { git = "https://github.com/paritytech/substrate.git", "branch" = "achimcc/arkworks-integration-remove-affine-hostcalls" }
pallet-aura = { git = "https://github.com/paritytech/substrate.git", "branch" = "achimcc/arkworks-integration-remove-affine-hostcalls" }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", "branch" = "achimcc/arkworks-integration-remove-affine-hostcalls" }
pallet-grandpa = { git = "https://github.com/paritytech/substrate.git", "branch" = "achimcc/arkworks-integration-remove-affine-hostcalls" }
pallet-sudo = { git = "https://github.com/paritytech/substrate.git", "branch" = "achimcc/arkworks-integration-remove-affine-hostcalls" }
frame-try-runtime = { git = "https://github.com/paritytech/substrate.git", "branch" = "achimcc/arkworks-integration-remove-affine-hostcalls" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", "branch" = "achimcc/arkworks-integration-remove-affine-hostcalls" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate.git", "branch" = "achimcc/arkworks-integration-remove-affine-hostcalls" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", "branch" = "achimcc/arkworks-integration-remove-affine-hostcalls" }
frame-executive = { git = "https://github.com/paritytech/substrate.git", "branch" = "achimcc/arkworks-integration-remove-affine-hostcalls" }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate.git", "branch" = "achimcc/arkworks-integration-remove-affine-hostcalls" }
sp-api = { git = "https://github.com/paritytech/substrate.git", "branch" = "achimcc/arkworks-integration-remove-affine-hostcalls" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", "branch" = "achimcc/arkworks-integration-remove-affine-hostcalls" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", "branch" = "achimcc/arkworks-integration-remove-affine-hostcalls" }
sp-session = { git = "https://github.com/paritytech/substrate.git", "branch" = "achimcc/arkworks-integration-remove-affine-hostcalls" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", "branch" = "achimcc/arkworks-integration-remove-affine-hostcalls" }
sp-version = { git = "https://github.com/paritytech/substrate.git", "branch" = "achimcc/arkworks-integration-remove-affine-hostcalls" }
sp-offchain = { git = "https://github.com/paritytech/substrate.git", "branch" = "achimcc/arkworks-integration-remove-affine-hostcalls" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", "branch" = "achimcc/arkworks-integration-remove-affine-hostcalls" }
sp-ark-bls12-381 = { git = "https://github.com/paritytech/ark-substrate" }
sp-ark-bls12-377 = { git = "https://github.com/paritytech/ark-substrate" }
sp-ark-bw6-761 = { git = "https://github.com/paritytech/ark-substrate" }
sp-ark-ed-on-bls12-377 = { git = "https://github.com/paritytech/ark-substrate" }
sp-ark-ed-on-bls12-381 = { git = "https://github.com/paritytech/ark-substrate" }
sp-ark-models = { git = "https://github.com/paritytech/ark-substrate" }
ark-groth16 = { git = "https://github.com/achimcc/groth16", "branch" = "master" }

