[workspace]

members = ["bls12_381", "bls12_377", "bw6_761","ed_on_bls12_377"]

[patch.crates-io]
ark-serialize = { git = "https://github.com/arkworks-rs/algebra/", branch = "releases"  }
ark-ff = { git = "https://github.com/arkworks-rs/algebra/", branch = "releases"  }
ark-ec = { git = "https://github.com/arkworks-rs/algebra/", branch = "releases"  }
ark-poly = { git = "https://github.com/arkworks-rs/algebra/", branch = "releases"  }
ark-algebra-test-templates = { git = "https://github.com/arkworks-rs/algebra/", branch = "releases"  }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std/" }
ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves" }
ark-bls12-377 = { git = "https://github.com/arkworks-rs/curves" }
ark-bw6-761 = { git = "https://github.com/arkworks-rs/curves" }
ark-ed-on-bls12-381 = { git = "https://github.com/arkworks-rs/curves" }
ark-ed-on-bls12-377 = { git = "https://github.com/arkworks-rs/curves" }