[package]
name = "sp-ark-models"
description = "A replacement model for bls12 of ark-ec"
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
ark-ff.workspace = true
ark-ec.workspace = true
ark-std.workspace = true
ark-serialize.workspace = true

derivative.workspace = true

[features]
default = [ "std" ]
std = [ "ark-ff/std", "ark-serialize/std", "ark-std/std" ]
parallel = [ "ark-std/parallel", "std" ]
