[package]
name = "test-utils"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ark-serialize = { version = "0.4.2", default-features = false }
ark-ff = { version = "0.4.2", default-features = false }
ark-ec = { version = "0.4.2", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
ark-bls12-377 = { version = "0.4.0", features = ["curve"], default-features = false }
ark-bls12-381 = { version = "0.4.0", features = ["curve"], default-features = false }
ark-bw6-761 = { version = "0.4.0", default-features = false }
ark-ed-on-bls12-381-bandersnatch = { version = "0.4.0", default-features = false }
ark-ed-on-bls12-377 = { version = "0.4.0", default-features = false }
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false }
ark-scale = { version = "0.0.11", features = ["hazmat"], default-features = false }

[features]
default = [ "std" ]
std = [
	"ark-bls12-377/std",
	"ark-bls12-381/std",
	"ark-bw6-761/std",
	"ark-ec/std",
	"ark-ed-on-bls12-377/std",
	"ark-ed-on-bls12-381-bandersnatch/std",
	"ark-ff/std",
	"ark-scale/std",
	"ark-serialize/std",
	"ark-std/std",
	"codec/std",
]
