[package]
name = "test-utils"
description = "Testing support crate"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
ark-ec.workspace = true
ark-std.workspace = true
ark-serialize.workspace = true

[features]
default = [ "std" ]
std = [ "ark-ec/std", "ark-std/std" ]
