[package]
name = "sp-ark-bls12-377"
description = "Extensions for the BLS12-377 pairing-friendly elliptic curve"
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
ark-ec.workspace = true
ark-ff.workspace = true
ark-std.workspace = true
ark-bls12-377.workspace = true
ark-scale.workspace = true
sp-ark-models.workspace = true

[dev-dependencies]
ark-serialize.workspace = true
ark-algebra-test-templates.workspace = true
test-utils.workspace = true

[features]
default = [ "std" ]
std = [ 
  "ark-ec/std",
  "ark-ff/std",
  "ark-std/std", 
  "ark-bls12-377/std",
  "ark-scale/std",
  "sp-ark-models/std",
  "ark-serialize/std",
  "ark-algebra-test-templates/std",
  "test-utils/std",
]
r1cs = [ "ark-bls12-377/r1cs" ]
# SCALE encoding related features for most of the arkworks types.
# Defaults to "compressed" and "validated".
scale-fast = [
  "scale-no-compress",
  "scale-no-validate",
]
scale-no-compress = [
  "test-utils/scale-no-compress",
]
scale-no-validate = [
  "test-utils/scale-no-validate",
]
