[package]
name = "ark-bls12-377-ext"
description = "Extensions for the BLS12-377 pairing-friendly elliptic curve"
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
ark-ec.workspace = true
ark-std.workspace = true
ark-bls12-377.workspace = true
ark-models-ext.workspace = true

[dev-dependencies]
ark-serialize.workspace = true
ark-algebra-test-templates.workspace = true
ark-ff.workspace = true
test-utils.workspace = true

[features]
default = [ "std" ]
std = [
  "ark-algebra-test-templates/std",
  "ark-bls12-377/std",
  "ark-ec/std",
  "ark-ff/std",
  "ark-models-ext/std",
  "ark-serialize/std",
  "ark-std/std",
  "test-utils/std",
]
parallel = [ "ark-ec/parallel", "ark-ff/parallel", "ark-std/parallel" ]
r1cs = [ "ark-bls12-377/r1cs" ]
