[package]
name = "sp-ark-bls12-381"
description = "Extensions for the BLS12-381 pairing-friendly elliptic curve"
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
ark-ff.workspace = true
ark-std.workspace = true
ark-bls12-381.workspace = true
ark-scale.workspace = true
sp-ark-models.workspace = true

[dev-dependencies] 
ark-ec.workspace = true
ark-serialize.workspace = true
ark-algebra-test-templates.workspace = true
test-utils.workspace = true

[features]
default = [ "std" ]
std = [  
  "ark-ff/std", 
  "ark-std/std", 
  "ark-bls12-381/std",
  "sp-ark-models/std",
  "ark-scale/std",
  "test-utils/std",
]
curve = [ "scalar_field" ]
scalar_field = []
# SCALE encoding related features for most of the arkworks types.
# Defaults to "compressed" and "validated".
scale-fast = [
  "scale-no-compress",
  "scale-no-validate",
]
scale-no-compress = [
  "test-utils/scale-no-compress",
]
scale-no-validate = [  
  "test-utils/scale-no-validate",
]
