[package]
name = "sp-ark-bw6-761"
version = "0.4.1-beta"
authors = ["Parity Technologies <admin@parity.io>", "Achim Schneider <achim@parity.io>", "Davide Galassi <davxy@datawok.net>" ]
repository = "https://github.com/paritytech/arkworks-ext"
description = "Extensions for the BW6-761 pairing-friendly elliptic curve"
keywords = ["cryptography", "finite-fields", "elliptic-curves"]
categories = ["cryptography"]
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
ark-ff = { version  ="0.4.2", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
ark-bw6-761 = { version = "0.4.0",default-features = false }
sp-ark-models = { path = "../../models", default-features = false }
ark-scale = { version = "0.0.11", features = ["hazmat"], default-features = false }

[dev-dependencies]
ark-ec = { version = "0.4.2", default-features = false }
ark-algebra-test-templates = { version = "0.4.2", default-features = false }
ark-serialize = { version = "0.4.2", default-features = false }
test-utils = { path = "../../test-utils", default-features = false }

[features]
default = [ "std" ]
std = [ 
  "ark-ff/std", 
  "ark-std/std", 
  "ark-bw6-761/std",
  "sp-ark-models/std",
  "ark-scale/std",
  "test-utils/std",
]
# SCALE encoding related features for most of the arkworks types.
# Defaults to "compressed" and "validated".
scale-fast = [
  "scale-no-compress",
  "scale-no-validate",
]
scale-no-compress = [
  "test-utils/scale-no-compress",
]
scale-no-validate = [  
  "test-utils/scale-no-validate",
]
