[package]
name = "sp-ark-bw6-761"
description = "Extensions for the BW6-761 pairing-friendly elliptic curve"
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true


[dependencies]
ark-ec.workspace = true
ark-ff.workspace = true
ark-std.workspace = true
ark-bw6-761.workspace = true
ark-scale.workspace = true
sp-ark-models.workspace = true

[dev-dependencies]
ark-serialize.workspace = true
ark-algebra-test-templates.workspace = true
test-utils.workspace = true

[features]
default = [ "std" ]
std = [
  "ark-algebra-test-templates/std",
  "ark-bw6-761/std",
  "ark-ec/std",
  "ark-ff/std",
  "ark-scale/std",
  "ark-serialize/std",
  "ark-std/std",
  "sp-ark-models/std",
  "test-utils/std",
]
# SCALE encoding related features for most of the arkworks types.
# Defaults to "compressed" and "validated".
scale-fast = [
	"scale-no-compress",
	"scale-no-validate", 
	"test-utils/scale-fast"
]
scale-no-compress = [ "test-utils/scale-no-compress" ]
scale-no-validate = [ "test-utils/scale-no-validate" ]
