[package]
name = "ark-bw6-761-ext"
description = "Extensions for the BW6-761 pairing-friendly elliptic curve"
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true


[dependencies]
ark-ec.workspace = true
ark-ff.workspace = true
ark-std.workspace = true
ark-bw6-761.workspace = true
ark-models-ext.workspace = true

[dev-dependencies]
ark-serialize.workspace = true
ark-algebra-test-templates.workspace = true
test-utils.workspace = true

[features]
default = [ "std" ]
std = [
  "ark-bw6-761/std",
  "ark-ec/std",
  "ark-ff/std",
  "ark-models-ext/std",
  "ark-serialize/std",
  "ark-std/std",
]
parallel = [ "ark-ec/parallel", "ark-ff/parallel", "ark-std/parallel" ]
