[package]
name = "ark-curve-constraint-tests"
version = "0.4.1-beta"
authors = ["Parity Technologies <admin@parity.io>", "Achim Schneider <achim@parity.io>", "arkworks contributors" ]
description = "A library for testing constraints for finite fields, elliptic curves, and pairings"
homepage = "https://arkworks.rs"
repository = "https://github.com/paritytech/ark-substrate"
documentation = "https://docs.rs/ark-curve-constraint-tests/"
keywords = ["cryptography", "finite-fields", "elliptic-curves", "r1cs", "substrate" ]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
ark-std = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.2", default-features = false }
ark-ff = { version = "0.4.2", default-features = false }
ark-relations = { version = "0.4.0", default-features = false }
ark-r1cs-std = { version = "0.4.0", default-features = false }
sp-ark-models = { path = "../../models", version = "0.4.1-beta", default-features = false }

[features]
default = [ "std" ]
std = [ 
    "ark-std/std",
    "ark-serialize/std",  
    "ark-ff/std", 
    "ark-r1cs-std/std",
    "sp-ark-models/std"
]
