[package]
name = "sp-ark-ed-on-bls12-377"
version = "0.4.1-beta"
authors = ["Parity Technologies <admin@parity.io>", "Achim Schneider <achim@parity.io>", "arkworks contributors" ]
repository = "https://github.com/paritytech/ark-substrate"
description = "A Twisted Edwards curve defined over the scalar field of the BLS12-377 curve, optimized for Substrate"
keywords = ["cryptography", "finite-fields", "elliptic-curves", "substrate" ]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"
publish = true

[dependencies]
ark-ff = { version = "0.4.2", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
ark-ed-on-bls12-377 = { version = "0.4.0",default-features = false }
ark-serialize = { version = "0.4.2", default-features = false }
ark-r1cs-std = { version = "0.4.0", default-features = false, optional = true }
sp-ark-models = { path = "../../models", version = "0.4.1-beta", default-features = false }
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false }
ark-scale = { version = "0.0.10", features = ["hazmat"], default-features = false }

[dev-dependencies]
sp-crypto-ec-utils =  { git = "https://github.com/paritytech/substrate.git", "branch" = "achimcc/arkworks-integration", version = "0.4.0",  default-features = false }
ark-relations = { version = "0.4.0", default-features = false }
ark-algebra-test-templates = { version = "0.4.2", default-features = false }
ark-curve-constraint-tests = { path = "../curve-constraint-tests", default-features = false }
ark-ec = { version = "0.4.2", default-features = false }

[features]
default = [ "std" ]
std = [
     "ark-ff/std",
     "ark-std/std", 
     "ark-ed-on-bls12-377/std", 
     "ark-serialize/std",
     "ark-r1cs-std/std",
     "sp-ark-models/std", 
     "codec/std",
     "ark-scale/std",
     "sp-crypto-ec-utils/std",
]
r1cs = [ "ark-r1cs-std", "ark-ed-on-bls12-377/r1cs" ]
