[package]
name = "sp-ark-ed-on-bls12-381"
version = "0.4.0"
authors = ["Parity Technologies <admin@parity.io>", "Achim Schneider <achim@parity.io>", "arkworks contributors" ]
repository = "https://github.com/paritytech/ark-substrate"
description = "A Twisted Edwards curve defined over the scalar field of the BLS12-381 curve, optimized for Substrate"
keywords = ["cryptography", "finite-fields", "elliptic-curves", "substrate" ]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"
publish = true

[dependencies]
ark-ff = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
ark-r1cs-std = { version = "0.4.0", optional = true, default-features = false }
ark-serialize = { version = "0.4.0", default-features = false }
ark-ed-on-bls12-381 = { version = "0.4.0",default-features = false }
ark-models = { path = "../../models", default-features = false }
sp-ark-utils = { path = "../utils", default-features = false  }

[dev-dependencies]
ark-relations = { version = "0.4.0", default-features = false }
ark-algebra-test-templates = { version = "0.4.0", default-features = false }
ark-curve-constraint-tests = { path = "../curve-constraint-tests", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
sp-io =  { version = "7.0.0",  default-features = false }

[features]
default = []
std = [
     "ark-ff/std",
     "ark-std/std",  
     "ark-r1cs-std/std",
     "ark-serialize/std",
     "ark-ed-on-bls12-381/std", 
     "ark-models/std", 
     "sp-ark-utils/std",
     "ark-relations/std",
     "ark-algebra-test-templates/std",
     "ark-curve-constraint-tests/std",
     "ark-ec/std",
     "sp-io/std", 
]
r1cs = ["ark-r1cs-std"]